src/components/Hobby.css
.hobby-card {
    background: #efefef;
    display: flex;
    flex-direction: row;
    width: 90%;
    min-width: 220px;
    max-width: 1000px;
    height: 100px;
    align-items: center;
    /* border: 1px solid #000; */
    border-radius: 12px;
    margin: 10px auto;
    cursor: pointer;
}

.hobby-image {
    background: #fff;
    width: 30%;
    height: 20vw;
    min-width: 60px;
    min-height: 60px;
    max-width: 70px;
    max-height: 70px;
    margin: 3%;
    /* border: 1px solid #000; */
    border-radius: 12px;
    object-fit: cover;
}
/* .hobby-img {
    background: #fff;
    width: 30%;
    height: 20vw;
    min-width: 60px;
    min-height: 60px;
    max-width: 80px;
    max-height: 80px;
    margin: 3%;
    border: 1px solid #000;
    border-radius: 12px;
    object-fit: cover;
} */

.hobby-info {
    width: 50%;
    height: 70px;
    font-size: max(min(3vw, 14px), 10px);
    text-align: left;
}

.hobby-name {
    font-weight: bold;
    font-size: max(min(4vw, 18px), 12px);
}

.hobbylist-button {
    margin-left: auto;
    margin-right: 5%;
}

